# payway-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: checkout.rs  generate_qr.rs
src/: client.rs  config.rs  constants.rs  error.rs  lib.rs
src/api/: checkout.rs  cof.rs  mod.rs  payout.rs  preauth.rs  qr.rs
src/types/: checkout.rs  cof.rs  common.rs  mod.rs  payout.rs  preauth.rs  qr.rs
src/utils/: hash.rs  mod.rs  rsa.rs
tests/: checkout.rs  integration.rs  qr.rs
tests/unit/: builder_checkout.rs  builder_qr.rs  hash_checkout.rs  hash_qr.rs  validation.rs
